# Bread

./: CMakeLists.txt  MOCK_WRAPPERS.hpp  README.md  archiver_compat_shell.sh  archiver_compatability_requirements.txt  byte_matrix_benchmark_report.txt  conventions.txt  game_confusion_matrix.html  game_stability_report.txt  main_qt.cpp  maze_stability.sh  maze_stability_report.txt  measure_predictability_release.sh  measure_uniformity_release.sh  password_expander_confusion_matrix.html  password_expander_quality_report.html  run_avalanche_report.txt  run_avalanche_tests.sh  run_bit_inclusion_report.txt  run_bit_inclusion_tests.sh  run_display_kruskal.sh  run_display_prim.sh  run_display_robot_maze.sh  run_game_perseverance_tests.sh  run_game_perseverance_tests_output.txt  run_game_perseverance_tests_report.txt  run_game_speed_benchmarks.sh  run_game_speed_benchmarks_output.txt  run_game_stability.sh  run_game_stat_benchmarks.sh  run_game_stat_benchmarks_output.txt  run_maze_perseverance_tests.sh  run_maze_perseverance_tests_report.txt  run_maze_quality.py  run_maze_sim_matrix.sh  run_maze_speed_benchmarks.sh  run_maze_speed_benchmarks_output.txt  run_maze_stat_benchmarks.sh  run_maze_stat_benchmarks_output.txt  run_password_expander_insane.sh  (+15 more)
build_codex/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_qt
build_codex/main_qt_autogen/: deps  moc_predefs.h
build_codex/peanutbutter_core_autogen/: deps  moc_predefs.h
build_codex_audit/: CMakeCache.txt  Makefile  archiver_compat_runner  cmake_install.cmake
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bread_main  byte_twister_poison_repeatability_tests  cmake_install.cmake  counter_repeatability_tests  digest_repeatability_suite  fast_matrix_round_trip_tests  fast_rand_repeatability_tests  game_confusion_matrix  game_perseverance_tests  game_repeatability_tests  maze_edge_connected_kruskal_quick  maze_edge_connected_prim_quick  maze_edge_connected_quick  maze_path_finding  maze_pathfinding_tests  maze_perseverance_tests  maze_robot_policy_repeatability_tests  maze_sim_matrix  maze_stability_tests  password_expander_confusion_matrix  password_expander_confusion_matrix.html  password_expander_quality_report  password_expander_quality_report.html  table_fill_and_engine_benchmark  test_maze_grid_validity  test_password_expander
match_three_example/: GameBoard.cpp  GameBoard.h
src/: ArchiverCompatibility.cpp  ArchiverCompatibility.hpp  PeanutButter.cpp  PeanutButter.hpp
src/Tables/: Tables.cpp  Tables.hpp  TablesHelpers.cpp  TablesHelpers.hpp  TablesTiming.cpp  TablesTiming.hpp
src/core/: Bread.hpp  BreadCore.cpp  BreadCore.hpp  Glyph.cpp  Glyph.hpp  main  main.cpp
src/counters/: AESCounter.cpp  AESCounter.hpp  ARIA256Counter.cpp  ARIA256Counter.hpp  ChaCha20Counter.hpp  MersenneCounter.cpp  MersenneCounter.hpp
src/crypto/: CryptoHash.hpp
src/fast_rand/: FastRand.cpp  FastRand.hpp
src/matrices/: FastMatrix.cpp  FastMatrix.hpp
src/maze/: Maze.cpp  Maze.hpp  MazeDolphinSharks.cpp  MazeDolphinSharks.hpp  MazeRobotCheese.cpp  MazeRobotCheese.hpp
src/rng/: Counter.hpp  Digest.hpp  Randomizer.hpp
test_runners_regression/: run_game_perseverance_tests.sh  run_maze_perseverance_tests.sh  run_tests_release.sh
test_runners_smoke/: run_test_maze_astar.sh  run_tests_debug.sh  run_tests_release.sh
tests/benchmark/: Benchmark_CounterPredictabilityAll.cpp  Benchmark_CounterSpeedComparison.cpp  Benchmark_CounterUniformityAll.cpp  Benchmark_CounterUniformityBaseline.cpp  Benchmark_CountersAndMatrix.cpp  Benchmark_Games_Speed_Repeatability.cpp  Benchmark_Games_Stats.cpp  Benchmark_Maze_Speed_Repeatability.cpp  Benchmark_Maze_Stats.cpp  Benchmark_Minigames_Speed8192.cpp  Benchmark_Minigames_Speed9216.cpp  Benchmark_PasswordExpanders_QualityAndSpeed.cpp
tests/common/: BenchMarker.hpp  CounterSeedBuffer.hpp  ExpanderDigestAdapter.hpp  GameCatalog.hpp  GameChunkRunner.hpp  Ledger.hpp  MazeDisplay.hpp  MazeEdgeConnectedUtils.hpp  MazeGeneratorHarness.hpp  PasswordExpanderQualityUtils.hpp  QuickConfig.hpp  Test_Grade_DigestPredictability_NTrials.hpp  Test_Grade_DigestUniformity_NTrials.hpp  Tests.hpp
tests/perseverance/: Games_perseverance_tests.cpp  Mazes_perseverance_tests.cpp  PerseveranceSuiteCore.cpp  PerseveranceSuiteCore.hpp
tests/quality/: MazeEdgeConnected.cpp  MazeEdgeConnectedKruskal.cpp  MazeEdgeConnectedKruskalQuick.cpp  MazeEdgeConnectedPrim.cpp  MazeEdgeConnectedPrimQuick.cpp  MazeEdgeConnectedQuick.cpp  MazePathFinding.cpp  PasswordExtenderQuality.cpp
tests/repeatability/: Counters_repeatability_tests.cpp  DigestRepeatabilityJobs.hpp  DigestRepeatabilitySuite.cpp  DigestRepeatability_Contaminated_Passwords.cpp  DigestRepeatability_Manual_Passwords.cpp  DigestRepeatability_Medium_Passwords.cpp  (+7 more)
tests_regression/: AvalancheTests.cpp  BitInclusionTests.cpp  ByteTwister_poison_repeatability_tests.cpp  Counters_repeatability_tests.cpp  DigestRepeatabilityJobs.hpp  DigestRepeatabilitySuite.cpp  DigestRepeatability_Contaminated_Passwords.cpp  DigestRepeatability_Manual_Passwords.cpp  DigestRepeatability_Medium_Passwords.cpp  DigestRepeatability_Oversized_Passwords.cpp  DigestRepeatability_Short_Passwords.cpp  DigestRepeatability_Utils.hpp  FastRand_repeatability_tests.cpp  GameStabilityTests.cpp  Game_confusion_matrix.cpp  Games_perseverance_tests.cpp  Games_repeatability_tests.cpp  MazeEdgeConnectedKruskalQuick.cpp  MazeEdgeConnectedPrimQuick.cpp  MazeEdgeConnectedQuick.cpp  MazePathFinding.cpp  MazeStabilityTests.cpp  Mazes_perseverance_tests.cpp  PasswordExpanderInsaneTest.cpp  PasswordExpander_confusion_matrix.cpp  PasswordExpander_quality_report.cpp  PerseveranceSuiteCore.cpp  PerseveranceSuiteCore.hpp  RepeatabilitySuiteCore.cpp  RepeatabilitySuiteCore.hpp  Table_fill_and_engine_benchmark.cpp  Tables_stage_benchmark.cpp  TestAllScramblers.cpp  TestMazeGridValidity.cpp
tests_smoke/: ArchiverCompatibility_smoke_tests.cpp  FastMatrix_round_trip_tests.cpp  Maze_pathfinding_tests.cpp  Test_PasswordExpander.cpp
tools/: Archiver_compat_runner.cpp  Maze_sim_matrix.cpp
(+112 files in other folders)
